--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,14 @@ dependencies:
   shared_preferences: ^2.0.0-nullsafety
   chewie: ^1.2.2
   video_player: ^2.1.10
+  moor: ^4.6.1+1
+  sqlite3_flutter_libs: ^0.5.12
+  path_provider: ^2.0.11
+  path: ^1.8.2
 
 dev_dependencies:
+  moor_generator: ^4.6.0+1
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
