--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   get: ^4.6.5
   charts_flutter: ^0.12.0
   data_table_2: ^2.3.10
+  firebase_analytics: ^10.1.0
 
 dev_dependencies:
   moor_generator: ^4.6.0+1
@@ -35,19 +36,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  fonts:
-    - family: Montserrat
-      fonts:
-        - asset: fonts/Montserrat-Regular.ttf
-
-    - family: Electrolize
-      fonts:
-        - asset: fonts/Electrolize-Regular.ttf
-
-    - family: Poppins
-      fonts:
-        - asset: fonts/poppins/Poppins-Light.ttf
-
   assets:
     - assets/images/
