--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0-nullsafety.0
   google_fonts: ^3.0.1
-  http:
+  http: ^0.13.5
   shared_preferences: ^2.0.0-nullsafety
   chewie: ^1.2.2
   video_player: ^2.1.10
